Completed all services, yay :)

--- a/microservices/landing/app/templates/index.html
+++ b/microservices/landing/app/templates/index.html
@@ -12,6 +12,9 @@
             <option value="minus">Subtraction</option>
             <option value="multiply">Multiplication</option>
             <option value="divide">Division</option>
+            <option value="modulo">Modulo</option>
+            <option value="exponent">Exponent</option>
+            <option value="gcd">GCD</option>
           </select>
          <br><br>
          <input type="submit" name="submit_button">
