--- a/microservices/landing/app/templates/index.html
+++ b/microservices/landing/app/templates/index.html
@@ -107,5 +107,8 @@
         </select>
         <input type="submit" name="submit_button" value="Calculate">
     </form>
+    {% for message in get_flashed_messages() %}
+        {{message}}
+    {% endfor %}
 </body>
 </html>
