--- a/microservices/landing/app/templates/index.html
+++ b/microservices/landing/app/templates/index.html
@@ -5,7 +5,7 @@
     <title>Arithmetic Microservices</title>
     <style>
         body {
-            background-color: #202020;
+            background-color: #111;
             color: #fff;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             font-weight: 300;
@@ -18,39 +18,50 @@
             text-align: center;
             margin-top: 50px;
             margin-bottom: 50px;
-            font-size: 36px;
-            font-weight: 500;
-            letter-spacing: 2px;
-            color: #ffcc00;
+            font-size: 60px;
+            font-weight: 700;
+            letter-spacing: 6px;
+            color: #f6ff00;
+        }
+         p {
+            text-align: center;
+            margin-top: 50px;
+            margin-bottom: 50px;
+            font-size: 24px;
+            font-weight: 700;
+            letter-spacing: 6px;
+            color: #f6ff00;
         }
 
         form {
             max-width: 600px;
             margin: 0 auto;
             padding: 40px;
-            background-color: #333333;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            background-color: #222;
+            border-radius: 20px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
         }
 
         input[type="submit"] {
             display: block;
             margin: 0 auto;
             padding: 12px 24px;
-            font-size: 16px;
+            font-size: 24px;
             font-weight: 500;
             text-transform: uppercase;
-            letter-spacing: 2px;
-            background-color: #ffcc00;
-            color: #202020;
+            letter-spacing: 4px;
+            background-color: #f6ff00;
+            color: #111;
             border: none;
-            border-radius: 5px;
+            border-radius: 10px;
             cursor: pointer;
             transition: background-color 0.2s ease;
+            text-shadow: 0 0 10px #f6ff00;
+            box-shadow: 0 5px 10px rgba(246, 255, 0, 0.3);
         }
 
         input[type="submit"]:hover {
-            background-color: #ffdb58;
+            background-color: #ffcc33;
         }
 
         select {
@@ -59,13 +70,14 @@
             padding: 12px;
             margin-bottom: 20px;
             border: none;
-            border-radius: 5px;
-            background-color: #444444;
-            color: #fff;
-            font-size: 16px;
+            border-radius: 10px;
+            background-color: #333;
+            color: #f6ff00;
+            font-size: 24px;
             font-weight: 500;
             text-transform: uppercase;
-            letter-spacing: 2px;
+            letter-spacing: 4px;
+            text-shadow: 0 0 10px #f6ff00;
         }
 
         input[name="first"],
@@ -75,19 +87,20 @@
             padding: 12px;
             margin-bottom: 20px;
             border: none;
-            border-radius: 5px;
-            background-color: #444444;
-            color: #fff;
-            font-size: 16px;
+            border-radius: 10px;
+            background-color: #333;
+            color: #f6ff00;
+            font-size: 24px;
             font-weight: 500;
             text-transform: uppercase;
-            letter-spacing: 2px;
+            letter-spacing: 4px;
+            text-shadow: 0 0 10px #f6ff00;
         }
 
         input::placeholder {
             color: #999;
             font-weight: 300;
-            font-size: 16px;
+            font-size: 24px;
         }
     </style>
 </head>
@@ -107,8 +120,11 @@
         </select>
         <input type="submit" name="submit_button" value="Calculate">
     </form>
+    <p>
     {% for message in get_flashed_messages() %}
         {{message}}
     {% endfor %}
+    </p>
 </body>
 </html>
+       
